--- a/ColorGame/colorGame.css
+++ b/ColorGame/colorGame.css
@@ -25,6 +25,9 @@ h1 {
 	text-transform: uppercase;
 }
 
-span {
-	color: white;
+#stripe {
+	background-color: white;
+	height: 30px;
+	text-align: center;
+	color: black;
 }
