--- a/ColorGame/colorGame.css
+++ b/ColorGame/colorGame.css
@@ -1,5 +1,7 @@
 body {
 	background-color: #232323;
+	margin: 0;
+	font-family: "Montserrat", "Avenir";
 }
 
 .square {
@@ -10,19 +12,32 @@ body {
 	float: left allows the divs to line up horizontally */
 	float:left;
 	margin: 1.66%;
+	border-radius: 15%;
+	transition: background-color 0.6s;
+
+	/*add support for webkit and moz*/
+	-webkit-transition: background-color 0.6s;
+	-moz-transition: background-color 0.6s;
 }
 
 #container {
 	max-width: 600px;
-	margin: 0 auto;
+	margin: 20px auto;
 }
 
 h1 {
 	color: white;
+	text-align: center;
+	background-color: steelblue;
+	margin: 0;
+	font-weight: normal;
+	text-transform: uppercase;
+	line-height: 1.1;
+	padding-bottom: 20px 0;
 }
 
 #colorDisplay {
-	text-transform: uppercase;
+	font-size: 200%;
 }
 
 #stripe {
@@ -34,9 +49,31 @@ h1 {
 
 button {
 	text-transform: uppercase;
+	border: none;
+	background: none;
+	height: 100%;
+	font-weight: 700;
+	color: steelblue;
+	letter-spacing: 1px;
+	font-size: inherit;
+	transition: all 0.3s;
+
+	/*add support for webkit and moz*/
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
 }
 
 .selected {
-	background-color: blue;
 	color: white;
+	background-color: steelblue;
+}
+
+#message {
+	display: inline-block;
+	width: 20%;
+}
+
+button:hover {
+	color: white;
+	background-color: steelblue;
 }
