--- a/ColorGame/colorGame.css
+++ b/ColorGame/colorGame.css
@@ -57,10 +57,10 @@ button {
 	letter-spacing: 1px;
 	font-size: inherit;
 	transition: all 0.3s;
-
 	/*add support for webkit and moz*/
 	-webkit-transition: all 0.3s;
 	-moz-transition: all 0.3s;
+	outline: none;
 }
 
 .selected {
