--- a/TodoList/assets/css/todos.css
+++ b/TodoList/assets/css/todos.css
@@ -58,6 +58,7 @@ input {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	border: 3px solid rgba(0,0,0,0);
+	display: none;
 }
 
 input:focus {
